# DEVOPS

./: docker-compose.yml
.github/workflows/: ci-cd.yml
client/: Dockerfile  package-lock.json  package.json
client/frontend/: package-lock.json  package.json
client/frontend/src/: App.jsx
client/frontend/src/Pages/: Login.jsx  home.jsx
client/public/: index.html
client/src/: App.css  App.js
client/src/components/: About.css  About.js  Contact.css  Contact.js  Education.css  Education.js  Experience.css  Experience.js  Footer.css  Footer.js  Hero.css  Hero.js  LoginForm.css  LoginForm.js  Navbar.css  Navbar.js  Projects.css  Projects.js  Skills.css  Skills.js
monitoring/: prometheus.yml
prometheus/: prometheus.yml
proxy/: default.conf
server/: Dockerfile  check_user.py  db.sqlite3  index.js  list_users.py  package-lock.json  package.json  pyproject.toml  requirements.txt  reset_password.py  test_login.py
server/accounts/: views.py
server/myproject/: settings.py  urls.py
server/myproject/templates/: dashbord.html  home.html
