[tool.poetry]
name = "myproject"
version = "0.1.0"
description = ""
authors = ["TonNom <email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2.1"
psycopg2-binary = "^2.9"
celery = "^5.3"
redis = "^5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
